RESOLVED FIXED125271
Cropping and drawing ImageBuffers results in uninitialized data being shown
https://bugs.webkit.org/show_bug.cgi?id=125271
Summary Cropping and drawing ImageBuffers results in uninitialized data being shown
Myles C. Maxfield
Reported 2013-12-04 17:57:52 PST
Attachments
Patch (2.51 KB, patch)
2013-12-04 18:02 PST, Myles C. Maxfield
no flags
Patch (2.83 KB, patch)
2013-12-04 20:42 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2013-12-04 18:02:12 PST
Tim Horton
Comment 2 2013-12-04 18:08:02 PST
Comment on attachment 218476 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=218476&action=review > Source/WebCore/ChangeLog:3 > + Fix r160121 terrible bug title!
Myles C. Maxfield
Comment 3 2013-12-04 20:42:52 PST
Simon Fraser (smfr)
Comment 4 2013-12-05 08:54:29 PST
Comment on attachment 218486 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=218486&action=review > Source/WebCore/ChangeLog:14 > + No new tests are necessary because the existing tests already test this > + functionality Do did the previous commit break tests? You said you had run all the tests.
Myles C. Maxfield
Comment 5 2013-12-05 09:37:34 PST
Right now, I'm allowing for the possibility of large backing stores; however, ATM no backing stores actually end up being larger than necessary (so the tests didn't pick this up). This patch only comes into play when we allow backing stores to get bigger than needed. After that, then the tests will be sensitive to this patch.
Myles C. Maxfield
Comment 6 2013-12-05 09:38:05 PST
s/didn't pick this up/didn't break/
WebKit Commit Bot
Comment 7 2013-12-05 12:41:48 PST
Comment on attachment 218486 [details] Patch Clearing flags on attachment: 218486 Committed r160189: <http://trac.webkit.org/changeset/160189>
WebKit Commit Bot
Comment 8 2013-12-05 12:41:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.